# The_Chopping_Block

./: .gitattributes  .gitignore  DEV_NOTES.md  README.md
.github/workflows/: ci.yml
SeratoLikeSampler/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
SeratoLikeSampler/Source/: AudioEngine.h  PadVoice.cpp  PadVoice.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SamplePool.cpp  SamplePool.h  SamplerLookAndFeel.cpp  SamplerLookAndFeel.h  SliceListComponent.h  Slicer.h  TimeStretch.h  Utilities.h  WaveformCache.cpp  WaveformCache.h
SeratoLikeSampler/Source/DSP/TimePitch/: TimePitchEngine.h
